# django-ninja-admin

./: .gitignore  .gitmodules  docker-compose-dev.yml
backend/: .gitignore  .pdm-python  pyproject.toml
backend/conf/: env.py
backend/system/: initialize.py
backend/system/apis/: login.py
docker/celery/: Dockerfile
docker/django/: Dockerfile
